fix gap

--- a/src/components/Carousel/style.css
+++ b/src/components/Carousel/style.css
@@ -71,6 +71,6 @@
         margin-top: 0px;
       }
   .slide, .slide img{
-    height: 250px;
+    height: 300px;
   }
 }
